# myutils

./: README.md
FixDST/pass1/dump/: DumpAssocInfoContainerTmp.cc  DumpTrkrClusterContainerTmp.cc  DumpTrkrClusterContainerTmp.h  DumpTrkrClusterHitAssocTmp.cc  DumpTrkrClusterHitAssocTmp.h  DumpTrkrHitSetContainerTmp.cc  DumpTrkrHitSetContainerTmp.h  DumpTrkrHitTruthAssocTmp.h  Makefile.am  PHNodeDump.cc
FixDST/pass1/macros/: run_dump.C  run_pass1.C
FixDST/pass1/source/: Makefile.am  TrkrClusterHitAssocTmp.cc  TrkrClusterHitAssocTmp.h  TrkrClusterHitAssocTmpLinkDef.h  TrkrHitSetContainerTmpLinkDef.h  TrkrHitSetTmp.cc  TrkrHitSetTmpLinkDef.h  TrkrHitTmp.cc  TrkrHitTmp.h  TrkrHitTruthAssocTmp.cc  TrkrHitTruthAssocTmp.h  configure.ac  fixdstpass1.cc  fixdstpass1.h
FixDST/pass1/trackbase/: TrkrClusterHitAssoc.cc  TrkrClusterHitAssoc.h  TrkrHitTruthAssoc.h
FixDST/pass1/trackreco/: AssocInfoContainer.cc  AssocInfoContainer.h
FixDST/pass2/dump/: DumpAssocInfoContainerTmp.cc  DumpAssocInfoContainerTmp.h  DumpTrkrClusterContainerTmp.cc  DumpTrkrClusterHitAssocTmp.cc  DumpTrkrHitSetContainerTmp.cc  DumpTrkrHitTruthAssocTmp.cc  Makefile.am  PHNodeDump.cc
FixDST/pass2/source/: AssocInfoContainerTmp.cc  AssocInfoContainerTmp.h  AssocInfoContainerTmpLinkDef.h  Makefile.am  TrkrClusterContainerTmp.cc  TrkrClusterContainerTmp.h  TrkrClusterContainerTmpLinkDef.h  TrkrClusterHitAssocTmp.cc  TrkrClusterHitAssocTmp.h  TrkrHitSetContainerTmp.cc  TrkrHitSetContainerTmp.h  TrkrHitSetTmp.h  TrkrHitTmpLinkDef.h  TrkrHitTruthAssocTmp.cc  TrkrHitTruthAssocTmp.h  TrkrHitTruthAssocTmpLinkDef.h  configure.ac  fixdstpass2.cc  fixdstpass2.h
HepMC/pythia8/: Makefile.am  README  configure.ac  example_input  pythia8_parameters
HepMC/simple_read_write/: Makefile.am  ReadHepMC2.cc  ReadHepMC3.cc  WriteHepMC2.cc  WriteHepMC3.cc  configure.ac
memsizetest/macro/: Fun4All_MemTest.C
memsizetest/src/: GenerateHits.cc  GenerateHits.h  GenerateRootHits.cc  GenerateRootHits.h  GenerateRootHitsLinkDef.h  GenerateRootTCHits.cc  GenerateRootTCHits.h  GenerateRootTCHitsLinkDef.h  GenerateRootTMapHits.cc  GenerateRootTMapHits.h  GenerateRootTMapHitsLinkDef.h  Makefile.am  MyContainer.cc  MyContainer.h  MyHit.h  MyHitv1.cc  MyHitv1.h  MyRootContainer.cc  MyRootContainer.h  MyRootContainerLinkDef.h  MyRootHit.h  MyRootHitv1.cc  MyRootHitv1.h  MyRootTCContainer.h  MyRootTMapContainer.cc  MyRootTMapContainer.h  MyRootTMapContainerLinkDef.h
